--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/tusharOxacular09/csv-uploader#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
