--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/tusharOxacular09/csv-uploader#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
